develop | added segments endpoints  | Added swagger endpoints
