# pkg/handler/response.go
@@ -9,6 +9,14 @@ type errorResponse struct {
 	Message string `json:"message"`
 }
 
+type successBaseResponse struct {
+	Id int `json:"id"`
+}
+
+type statusResponse struct {
+	Status string `json:"status"`
+}
+
 func newErrorResponse(c *gin.Context, statusCode int, message string) {
 	logrus.Error(message)
 	c.AbortWithStatusJSON(statusCode, errorResponse{message})
